--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>mo4l</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div id="center-content">
+        <div id="centered-text">Mo4l</div>
+        <div id="music-player-container">
+            <div id="track-info"></div>
+            <div id="controls-container">
+                <button id="prev-btn">|&lt;</button>
+                <button id="play-pause-btn">Play</button>
+                <button id="next-btn">&gt;|</button>
+            </div>
+            <div id="progress-bar-container">
+                <div id="progress-bar"></div>
+            </div>
+        </div>
+    </div>
+    <audio id="audio-player"></audio>
+    <canvas id="canvas1"></canvas>
+
+    <script src="script.js"></script>
+</body>
+</html>
